--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,13 @@
 * {
   box-sizing: border-box;
+
 }
 
 body {
   margin: 0 auto;
   width: 1440px;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 main {
