--- a/src/main.css
+++ b/src/main.css
@@ -146,7 +146,7 @@ hr {
   list-style: none;
   justify-content: space-between;
   flex-wrap: wrap;
-  flex: 1 1 300px;
+  margin: 0 14px;
 }
 
 .list-icon a {
@@ -200,7 +200,6 @@ hr {
 }
 
 .css-frame {
-  height: 3em;
   font-family: var(--main-font);
   font-style: normal;
   font-weight: normal;
@@ -210,10 +209,9 @@ hr {
 }
 
 .link {
+  margin-left: auto;
   width: 76px;
   height: 28px;
-  margin-top: -60px;
-  margin-left: 370px;
   background: white;
   border: 2px solid var(--hover_background);
   box-sizing: border-box;
@@ -249,7 +247,7 @@ hr {
   color: white;
   border: none;
   align-self: center;
-  margin-left: 25px;
+  margin-left: 42px;
   margin-top: 54px;
   outline: none;
 }
@@ -257,4 +255,15 @@ hr {
 .all-candy:hover {
   background-color: var(--hover_violet);
   transition: 0.5s;
+}
+.nav-hr {
+  border: none;
+  height: 1px;
+  background-color: var(--light_background);
+  width: 470px;
+  margin-left: 35px;
+}
+.container-link{
+  display: flex;
+  align-items: center;
 }
